        Fix anon functions in INIT block (#352) (atoomic)
          and more const CV fixes.
        Fix C.xs for old non-c99 compilers. i.e. msvc6
        Fix segfault from PVMG (#348) (atoomic), regression added
          for match once
        Fix stack corruption in HV::ENAMES (#351)
        Fix SEGV with empty get_cv(), esp. from non-XS functions (#358)

1.53 2015-12-05 rurban
        added 5.22 support, some cperl optimizations and fixed most remaining 5.14 issues.
        Bytecode broken upstream with 5.22.0

        * Bytecode (1.17): removed lastsib bit for 5.21.2-5.21.10, support only moresib op
        Add ops for padl, padn, padnl, unop_aux and methop needed for 5.22
        ByteLoader was broken upstream with 5.22. You need to build a perl with
        `perlall build --patches-Compiler 5.22.0` or use cperl5.22.2.
        Added a probe, set $B::C::Flags::have_byteloader
        * Disassembler (1.13), Assembler (1.13): support PADNAME and PADNAMELIST for 5.22
        * C: fix B::PMOP::precomp for UTF8 (#333, #338, GH#50)
        Add 5.22 support with a new unop_aux (multideref) section, methop support,
          new support for PADNAME and PADNAMELIST objects.
        Removed B::Section which used base. (toddr)
        Re-add PL_sv_objcount on cperl
        Fixed XSUB CONSTSUB alias (44,45,... PR #228) (atoomic)
          and anonymous CVs for 5.22 (#246, #305)
        Proper utf8 support for gv_fetchpv, gv_stashpv and cv_get,
          cache gv_stashpv calls.
        Fix 5.22 for empty hash keys, share_hek("") (272, GH#249)
        Fixed refcounts for shared hek's, fixing the notorious unshare_hek assertions
          since 5.10 (GH #251, #255). See 1.06: "Had to disable -O1 -fcog (pv_copy_on_grow)
          on 5.10 and higher until I find out how to fool S_unshare_hek_or_pvn. This fixes
          all C -O1 and -O2 tests. Warn about this."
        Fix Inf/NaN support for C (GH#287)