@@ -5,7 +5,7 @@ use warnings;
 
 use B qw(svref_2object);
 
-use B::C::Flags ();
+use B::C::Config ();
 
 use B::C::Setup qw/verbose debug/;
 use B::C::Packages qw/is_package_used mark_package_deleted/;
@@ -156,7 +156,7 @@ sub optimize {
                 $path =~ s/::/\//g;
                 $path .= "/" if $path;    # can be empty
                 $laststash = $stashname unless $laststash;    # without ::
-                my $sofile = "auto/" . $path . $laststash . '\.' . $B::C::Flags::Config{'dlext'};
+                my $sofile = "auto/" . $path . $laststash . '\.' . $B::C::Config::Config{'dlext'};
 
                 #warn "staticxs search $sofile in @DynaLoader::dl_shared_objects\n"
                 #  if verbose() and $self->{'debug'}->{pkg};
